--- a/A Business Website/index.html
+++ b/A Business Website/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <nav id="navbar">
-            <h1 class="smallbusi">SMALL <span>BUSINESS</span></h1>
+            <h1 class="smallbusi">SMALL <span class="business">BUSINESS</span></h1>
             <ul class="link">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Service</a></li>
@@ -26,43 +26,46 @@
                 </div>
                 <img src="images/umbrella.gif" width="255" height="218" alt="Umbrella">
             </div>
-            <div>
-                <div>
+            <div id="b4service">
                     <h2>Put an important introduction heading for your visitors to notice.</h2>
+            </div>
+            <div id="page">
+                <div id="flex3col">
+                    <h3 class="what">WHAT WE DO?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
-                <div id="page">
-                    <div>
-                        <h3>WHAT WE DO?</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
-                    </div>
-                    <div>
-                        <h3>OUR PROCESS</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse ipsam temporibus, enim cum quibusdam totam eveniet quisquam natus asperiores porro et hic voluptatibus vero iure quis dolore excepturi assumenda nostrum?</p>
-                    </div>
-                    <div>
-                        <h3>WHY CHOOSE US</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur eveniet provident animi iure qui odio, numquam est rerum minus saepe veniam quia, tempora incidunt! Error quae officia in omnis. Soluta!</p>
-                    </div>
+                <div id="flex3col2nd">
+                    <h3 class="our">OUR PROCESS</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
-                <div>
-                    <h3>World class services</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aliquid distinctio iure quae? Magni consequatur tempora hic reiciendis molestias praesentium. Recusandae dolores hic velit ea nulla blanditiis porro quia voluptate.</p>
-                </div>
-                <div>
-                    <h3>Affordable Prices</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima obcaecati quos consequuntur, ab sit accusamus tempora, aspernatur praesentium nulla perspiciatis molestiae ex a. Recusandae harum quam earum reiciendis voluptatem. Veniam?</p>
-                </div>
-                <div>
-                    <h3>Great Support</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum mollitia quibusdam dolorem minima saepe repellat aliquid, laboriosam placeat rem quod. Vero laborum ex quam illo suscipit exercitationem, eos eveniet similique?</p>
-                </div>
-                <div>
-                    <h3>Satisfied Customers</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa officia totam et dolore ratione ab, est soluta voluptatum nihil rerum temporibus deserunt ipsam commodi illo, nam aliquam ipsum explicabo vitae.</p>
+                <div id="flex3col3rd">
+                    <h3 class="why">WHY CHOOSE US</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
             </div>
-        </section>
-    </div>
+            <div id="whatmakes">
+                <p>What Makes Us Stand Out ?</p>
+            </div>
+            <div id="page2">
+                <div>
+                <h3>World class services</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
+                </div>
+                <div>
+                <h3>Affordable Prices</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
+                </div>
+                <div>
+                <h3>Great Support</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
+                </div>
+                <div>
+                <h3>Satisfied Customers</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
+                </div>
+                </div>
+            </section>
+            </div>
     <footer>
         <div>
             <a href="#">Home</a>
