work in complete

--- a/A Business Website/index.html
+++ b/A Business Website/index.html
@@ -46,21 +46,21 @@
             <div id="whatmakes">
                 <p>What Makes Us Stand Out ?</p>
             </div>
-            <div id="page2">
-                <div>
-                <h3>World class services</h3>
+            <div id="page">
+                <div id="flex3col">
+                <h3 class="what">World class services</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
-                <div>
-                <h3>Affordable Prices</h3>
+                <div id="flex3col2nd">
+                <h3 class="our">Affordable Prices</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
-                <div>
-                <h3>Great Support</h3>
+                <div id="flex3col3rd">
+                <h3 class="why">Great Support</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
-                <div>
-                <h3>Satisfied Customers</h3>
+                <div id="flex3col4th">
+                <h3 class="satisfied">Satisfied Customers</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, vero accusamus pariatur repudiandae voluptatum harum distinctio sunt mollitia nam aliquam illo commodi aliquid suscipit excepturi? Quidem cupiditate deleniti eaque iure.</p>
                 </div>
                 </div>
